chore(test): Print package name before run the tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "gjsify",
         "mainloop",
         "outdir",
-        "outfile"
+        "outfile",
+        "tform"
     ],
     "typescript.tsdk": "node_modules/typescript/lib"
 }
