--- a/packages/gjs/gio-2.0/package.json
+++ b/packages/gjs/gio-2.0/package.json
@@ -8,11 +8,12 @@
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
+        "print:name": "echo '@gjsify/gio-2.0'",
         "build": "yarn run build:gjsify && yarn run build:types",
         "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
-        "build:test": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
-        "test": "yarn run build && yarn run build:test && yarn run test:gjs",
+        "build:test": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
+        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js"
     },
     "keywords": [
