--- a/packages/deno/deno_globals/package.json
+++ b/packages/deno/deno_globals/package.json
@@ -7,11 +7,12 @@
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
+        "print:name": "echo '@gjsify/deno_globals'",
         "build": "gjsify build --library src/**/*.{ts,js}",
         "build:test": "yarn run build:test:gjs && yarn run build:test:deno",
-        "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
-        "build:test:deno": "gjsify build src/test.ts --platform deno --outfile test.deno.js",
-        "test": "yarn run build && yarn run build:test && yarn run test:deno && yarn run test:gjs",
+        "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
+        "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
+        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:deno && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:deno": "deno run test.deno.js"
     },
