--- a/packages/node/buffer/package.json
+++ b/packages/node/buffer/package.json
@@ -6,14 +6,15 @@
     "module": "lib/esm/index.js",
     "scripts": {
         "clear": "rm -rf lib",
+        "print:name": "echo '@gjsify/buffer'",
         "bundle:deno": "rm -f src/buffer.deno.js && deno bundle https://deno.land/std/node/buffer.ts src/buffer.deno.js",
         "patch:deno": "node ./patch-deno.mjs",
         "build": "yarn run build:deno && gjsify build --library src/**/*.{ts,js}",
         "build:deno": "yarn run bundle:deno && yarn run patch:deno",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
-        "build:test:gjs": "gjsify build src/test.mts --platform gjs --outfile test.gjs.mjs",
-        "build:test:node": "gjsify build src/test.mts --platform node --outfile test.node.mjs",
-        "test": "yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
+        "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
+        "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
+        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.mjs",
         "test:node": "node test.node.mjs"
     },
