--- a/packages/node/url/tsconfig.json
+++ b/packages/node/url/tsconfig.json
@@ -14,5 +14,5 @@
     "checkJs": false,
     "reflection": false,
     "include": ["src/**/*.ts"],
-    "exclude": ["src/test.ts", "src/**/*.spec.ts"]
+    "exclude": ["src/test.mts", "src/**/*.spec.ts"]
 }
