--- a/packages/gjs/unit/package.json
+++ b/packages/gjs/unit/package.json
@@ -11,11 +11,11 @@
     "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
     "build:types": "tsc --emitDeclarationOnly",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
-    "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
-    "build:test:node": "gjsify build src/test.ts --app node --outfile test.node.js",
+    "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
+    "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
     "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
-    "test:gjs": "gjs -m test.gjs.js",
-    "test:node": "node test.node.js"
+    "test:gjs": "gjs -m test.gjs.mjs",
+    "test:node": "node test.node.mjs"
   },
   "repository": {
     "type": "git",
