--- a/examples/deno-module-jsonc/package.json
+++ b/examples/deno-module-jsonc/package.json
@@ -9,10 +9,12 @@
     "clear": "rm -rf dist",
     "start": "yarn run build && yarn run start:gjs",
     "start:gjs": "gjs -m dist/index.gjs.js",
-    "start:node": "node dist/index.node.cjs",
-    "build": "yarn run build:gjs && yarn run build:node",
+    "start:node": "node dist/index.node.js",
+    "start:deno": "deno run dist/index.deno.js",
+    "build": "yarn run build:gjs && yarn run build:node && yarn run build:deno",
     "build:gjs": "gjsify build src/index.ts --app gjs --outfile dist/index.gjs.js",
-    "build:node": "gjsify build src/index.ts --app node --outfile dist/index.node.cjs"
+    "build:node": "gjsify build src/index.ts --app node --outfile dist/index.node.js",
+    "build:deno": "gjsify build src/index.ts --app deno --outfile dist/index.deno.js"
   },
   "engines": {
     "node": "16",
