--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -29,6 +29,8 @@
     },
     "dependencies": {
         "@gjsify/types": "workspace:^",
-        "@gjsify/utils": "workspace:^"
+        "@gjsify/utils": "workspace:^",
+        "@types/bit-twiddle": "^1.0.1",
+        "bit-twiddle": "^1.0.2"
     }
 }
