--- a/packages/web/webgl/tsconfig.json
+++ b/packages/web/webgl/tsconfig.json
@@ -1,19 +1,20 @@
 {
-    "compilerOptions": {
-      "module": "ESNext",
-      "types": ["node"],
-      "target": "ESNext",
-      "moduleResolution": "node",
-      "experimentalDecorators": true,
-      "outDir": "lib",
-      "rootDir": "src",
-      "composite": true,
-      "strict": true
-    },
-    "skipLibCheck": true,
-    "allowJs": true,
-    "checkJs": false,
-    "reflection": false,
-    "include": ["src/ts/**/*.ts"],
-    "exclude": ["src/ts/test.ts", "src/ts/**/*.spec.ts"]
+  "compilerOptions": {
+    "module": "ESNext",
+    "types": ["node"],
+    "target": "ESNext",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "outDir": "lib",
+    "rootDir": "src",
+    "composite": true,
+    "strict": true,
+    "typeRoots": ["node_modules", "src/ts/@types"]
+  },
+  "skipLibCheck": true,
+  "allowJs": true,
+  "checkJs": false,
+  "reflection": false,
+  "include": ["src/ts/**/*.ts"],
+  "exclude": ["src/ts/test.ts", "src/ts/**/*.spec.ts"],
 }
