feat(webgl): Continue working on a webgl implementation

--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -10,9 +10,10 @@
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/webgl'",
         "init:meson": "meson setup build .",
-        "build": "yarn run init:meson && yarn run build:meson && yarn run build:gjsify",
+        "build": "yarn run init:meson && yarn run build:meson && yarn run build:gjsify && yarn run build:types",
         "build:gjsify": "gjsify build --library src/ts/**/*.{ts,js}",
         "build:meson": "meson compile -C build",
+        "build:types": "tsc --emitDeclarationOnly || exit 0",
         "build:test": "gjsify build src/ts/test.ts --app gjs --outfile test.gjs.js",
         "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:gjs",
         "test:gjs": "LD_LIBRARY_PATH=build GI_TYPELIB_PATH=build gjs -m test.gjs.js"
