feat(webgl): Switch to libepoxy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
         "mainloop",
         "outdir",
         "outfile",
+        "Parameterfv",
+        "Parameteriv",
         "Parameterx",
         "stackgl",
         "tform",
