feat(webgl): Fade demo is working :tada:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "esbuild",
         "framebuffers",
         "gjsify",
+        "glarea",
         "glsl",
         "Gwebgl",
         "ioffset",
