--- a/packages/web/webgl/meson.build
+++ b/packages/web/webgl/meson.build
@@ -11,7 +11,7 @@ add_project_arguments(
     language: 'vala'
 )
 
-dependencies = [ dependency('glib-2.0'), dependency('gobject-2.0'), dependency('gdk-pixbuf-2.0'), dependency('epoxy')]
+dependencies = [ dependency('glib-2.0'), dependency('gobject-2.0'), dependency('gdk-pixbuf-2.0'), dependency('gtk4'), dependency('epoxy')]
 
 sources = files('src/vala/handle-types.vala', 'src/vala/webgl-rendering-context-base.vala', 'src/vala/webgl-rendering-context.vala')
 
@@ -32,3 +32,8 @@ custom_target(meson.project_name() + '-0.1.typelib', command: [g_ir_compiler, '-
               depends: libGwebgl,
               install: true,
               install_dir: get_option('libdir') / 'girepository-1.0')
+
+
+# Test app
+test_sources = files('src/vala/handle-types.vala', 'src/vala/webgl-rendering-context-base.vala', 'src/vala/webgl-rendering-context.vala', 'src/test/app.vala')
+executable('gwebgl_vala_app', test_sources, dependencies: dependencies)
