--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "Parameterfv",
         "Parameteriv",
         "Parameterx",
+        "Pixbuf",
         "stackgl",
         "tform",
         "Toks",
