feat(webgl): Update example based on Mozilla WebGL tutorial part 7

--- a/examples/webgl-tutorial-07/tsconfig.json
+++ b/examples/webgl-tutorial-07/tsconfig.json
@@ -8,5 +8,5 @@
       "outDir": "dist"
     },
     "reflection": true,
-    "files": ["src/index.ts"]
+    "files": ["src/gjs.ts", "src/browser.ts"]
 }
