--- a/examples/webgl-tutorial-07/package.json
+++ b/examples/webgl-tutorial-07/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gjsify/example-webgl-tutorial-07",
+  "name": "@gjsify/example-webgl-tutorial-08",
   "private": true,
   "version": "0.0.1",
   "description": "",
@@ -8,9 +8,12 @@
   "scripts": {
     "clear": "rm -rf dist",
     "start": "yarn run build && yarn run start:gjs",
-    "start:gjs": "LD_LIBRARY_PATH=../../packages/web/webgl/build GI_TYPELIB_PATH=../../packages/web/webgl/build gjs -m dist/index.gjs.js",
-    "build": "yarn run build:gjs",
-    "build:gjs": "gjsify build src/index.ts --app gjs --outfile dist/index.gjs.js"
+    "start:gjs": "LD_LIBRARY_PATH=../../packages/web/webgl/build GI_TYPELIB_PATH=../../packages/web/webgl/build gjs -m dist/gjs.js",
+    "start:browser": "http-server dist",
+    "build": "yarn run clear && yarn run build:gjs && yarn run build:browser && yarn run build:assets",
+    "build:gjs": "gjsify build src/gjs.ts --app gjs --outfile dist/gjs.js",
+    "build:assets": "cp -f src/index.html dist/index.html && cp -f src/webgl.css dist/webgl.css && cp -f src/cubetexture.png dist/cubetexture.png",
+    "build:browser": "gjsify build src/browser.ts --app browser --outfile dist/browser.js"
   },
   "engines": {
     "node": "16",
@@ -20,10 +23,14 @@
   "license": "MIT",
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
-    "@types/node": "^18.7.18"
+    "@types/gl-matrix": "^3.2.0",
+    "@types/node": "^18.7.18",
+    "http-server": "^14.1.1",
+    "open-cli": "^7.1.0"
   },
   "dependencies": {
     "@gjsify/types": "workspace:^",
-    "@gjsify/webgl": "workspace:^"
+    "@gjsify/webgl": "workspace:^",
+    "gl-matrix": "^3.4.3"
   }
 }
