--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "packages/node/assert"]
 	path = packages/node/assert
 	url = https://github.com/gjsify/assert.git
+[submodule "packages/node/deno_std"]
+	path = packages/node/deno_std
+	url = git@github.com:gjsify/deno_std.git
