--- a/packages/node/node-internal/package.json
+++ b/packages/node/node-internal/package.json
@@ -20,8 +20,7 @@
     },
     "keywords": [
         "gjs",
-        "node",
-        "console"
+        "node"
     ],
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
