feat(deno): Add empty deno core and ops methods (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Parameteriv",
         "Parameterx",
         "Pixbuf",
+        "primordials",
         "stackgl",
         "tform",
         "Toks",
