--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -26,5 +26,8 @@
         "@gjsify/unit": "workspace:^",
         "@tsconfig/deno": "^1.0.6",
         "@types/node": "^18.7.18"
+    },
+    "dependencies": {
+        "@gjsify/deno_core": "workspace:^"
     }
 }
