--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -2,13 +2,15 @@
     "name": "@gjsify/deno_runtime",
     "version": "0.0.1",
     "description": "Deno runtime module for gjsify",
-    "main": "lib/cjs/index.js",
-    "module": "lib/mjs/index.js",
+    "main": "lib/index.js",
+    "module": "lib/index.js",
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/deno_runtime'",
-        "build": "gjsify build --library src/**/*.{ts,js}",
+        "build": "yarn run build:gjsify && yarn run build:types",
+        "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
+        "build:types": "tsc --emitDeclarationOnly || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
