--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "tform",
         "Toks",
         "utype",
+        "webidl",
         "xloc"
     ],
     "typescript.tsdk": "node_modules/typescript/lib"
