feat(deno): Add deno more extensions (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "Gwebgl",
         "ioffset",
         "mainloop",
+        "mimesniff",
         "outdir",
         "outfile",
         "Parameterfv",
