--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -2,9 +2,10 @@
     "name": "@gjsify/utils",
     "version": "0.0.1",
     "description": "Utils module for gjsify",
-    "main": "lib/cjs/index.js",
-    "module": "lib/esm/index.js",
-    "types": "lib/types/index.d.ts",
+    "main": "lib/index.js",
+    "module": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/utils'",
@@ -24,6 +25,6 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/types": "workspace:^",
-        "typescript": "^4.8.3"
+        "typescript": "^4.8.4"
     }
 }
