--- a/packages/gjs/utils/tsconfig.json
+++ b/packages/gjs/utils/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "outDir": "lib",
-    "declarationDir": "lib/types",
+    "declarationDir": "lib",
     "rootDir": "src",
     "composite": true
   },
