--- a/packages/node/node-internal/package.json
+++ b/packages/node/node-internal/package.json
@@ -10,7 +10,7 @@
         "print:name": "echo '@gjsify/node-internal'",
         "build": "yarn run build:gjsify && yarn run build:types",
         "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
-        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:types": "tsc --emitDeclarationOnly",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
         "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
