--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -27,6 +27,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@tsconfig/deno": "^1.0.6",
-        "@types/node": "^18.11.9"
+        "@types/node": "^18.11.9",
+        "typescript": "^4.9.3"
     }
 }
