chore(deno): First very simple deno runtime test is working

--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -25,8 +25,8 @@
         "@gjsify/assert": "workspace:^",
         "@gjsify/events": "workspace:^",
         "@gjsify/fs": "workspace:^",
-        "@gjsify/globals": "workspace:^",
         "@gjsify/node-internal": "workspace:^",
+        "@gjsify/node_globals": "workspace:^",
         "@gjsify/os": "workspace:^",
         "@gjsify/process": "workspace:^",
         "@gjsify/require": "workspace:^",
