--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -5,6 +5,23 @@
     "main": "lib/index.js",
     "module": "lib/index.js",
     "type": "module",
+    "exports": {
+        ".": {
+            "import": "./lib/index.js",
+            "default": "./lib/index.js"
+        },
+        "./*": {
+            "import": "./lib/*.js",
+            "default": "./lib/*.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "*": [
+                "./lib/*.d.ts"
+            ]
+        }
+    },
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/deno_runtime'",
@@ -14,9 +31,9 @@
         "build:test": "yarn run build:test:gjs && yarn run build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
-        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:deno && yarn run test:gjs",
+        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:gjs && yarn run test:deno",
         "test:gjs": "gjs -m test.gjs.js",
-        "test:deno": "deno run test.deno.js"
+        "test:deno": "deno run --unstable --allow-env test.deno.js"
     },
     "keywords": [
         "gjs",
@@ -25,6 +42,7 @@
     ],
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
+        "@gjsify/empty": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@tsconfig/deno": "^1.0.6",
         "@types/node": "^18.11.9",
