chore(examples): Fix examples (expect deno)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Abortable",
         "behaviour",
         "btok",
+        "deepkit",
         "Deepkit's",
         "dflt",
         "DONT",
