--- a/examples/deepkit-di/package.json
+++ b/examples/deepkit-di/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "@deepkit/core": "^1.0.1-alpha.75",
     "@deepkit/injector": "^1.0.1-alpha.75",
-    "@deepkit/type": "^1.0.1-alpha.75"
+    "@deepkit/type": "^1.0.1-alpha.75",
+    "@gjsify/node-globals": "workspace:^"
   },
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
