--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -7,7 +7,7 @@
     "types": "lib/index.d.ts",
     "type": "module",
     "scripts": {
-        "clear": "rm -rf lib",
+        "clear": "rm -rf lib tmp build test.gjs.js",
         "print:name": "echo '@gjsify/webgl'",
         "init:meson": "meson setup build .",
         "build": "yarn run init:meson && yarn run build:meson && yarn run build:gjsify && yarn run build:types",
