--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "packages/node/deno_std"]
 	path = packages/node/deno_std
 	url = git@github.com:gjsify/deno_std.git
+[submodule "packages/infra/esbuild-plugin-deno-loader"]
+	path = packages/infra/esbuild-plugin-deno-loader
+	url = git@github.com:gjsify/esbuild-plugin-deno-loader.git
