--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "glarea",
         "glsl",
         "Gwebgl",
+        "importmap",
         "ioffset",
         "mainloop",
         "mimesniff",
