--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -15,14 +15,16 @@
     },
     "keywords": [
         "gjs",
-        "node",
-        "fs"
+        "gjsify",
+        "esbuild"
     ],
     "dependencies": {
         "@deepkit/core": "^1.0.1-alpha.75",
         "@deepkit/injector": "^1.0.1-alpha.75",
         "@deepkit/type": "^1.0.1-alpha.75",
         "@gjsify/assert": "workspace:^",
+        "@gjsify/esbuild-plugin-deepkit": "workspace:^",
+        "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
         "@gjsify/events": "workspace:^",
         "@gjsify/fs": "workspace:^",
         "@gjsify/node-globals": "workspace:^",
@@ -45,9 +47,9 @@
         "web-streams-polyfill": "^3.2.1"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.188",
-        "esbuild": "^0.15.13",
+        "@types/lodash": "^4.14.190",
+        "esbuild": "^0.15.16",
         "lodash": "^4.17.21",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.3"
     }
 }
