--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -26,7 +26,7 @@
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/deno-runtime'",
         "build": "yarn run build:gjsify && yarn run build:types",
-        "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
+        "build:gjsify": "gjsify build --library src/{core,ext,ops,runtime,types}/*.{ts,js}",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
