chore: Add missing dependency

--- a/examples/deepkit-types/package.json
+++ b/examples/deepkit-types/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^18.11.9"
   },
   "dependencies": {
+    "@deepkit/core": "^1.0.1-alpha.75",
     "@deepkit/type": "^1.0.1-alpha.75"
   }
 }
