--- a/packages/gjs/unit/package.json
+++ b/packages/gjs/unit/package.json
@@ -7,7 +7,7 @@
   "types": "lib/types/index.d.ts",
   "scripts": {
     "print:name": "echo '@gjsify/unit'",
-    "build": "yarn run build:gjsify && yarn run build:types",
+    "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
     "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
     "build:types": "tsc --emitDeclarationOnly",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
