--- a/packages/infra/esbuild-plugin-deepkit/package.json
+++ b/packages/infra/esbuild-plugin-deepkit/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "clear": "rm -rf dist",
         "print:name": "echo '@gjsify/esbuild-plugin-deepkit'",
-        "build": "yarn run build:js && yarn run build:types",
+        "build": "yarn print:name && yarn build:js && yarn run build:types",
         "build:js": "node esbuild.mjs",
         "build:types": "tsc --emitDeclarationOnly"
     },
