--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -12,7 +12,7 @@
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/cli'",
         "start": "node lib/index.js",
-        "build": "tsc && yarn run chmod",
+        "build": "yarn print:name && tsc && yarn run chmod",
         "chmod": "chmod +x ./lib/index.js"
     },
     "keywords": [
